Bug 15318 - idmap_autorid may fail to map sids of trusted domains for the first time.
Summary: idmap_autorid may fail to map sids of trusted domains for the first time.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.18.0rc3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-23 07:01 UTC by Stefan Metzmacher
Modified: 2023-05-11 07:10 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.18.next, 4.17.next (2.07 KB, patch)
2023-03-11 00:26 UTC, Jeremy Allison
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2023-02-23 07:01:35 UTC
When we see a trusted domain SID for the first time,
idmap_autorid returns ID_REQUIRE_TYPE only for the first sid
and leaves the others with ID_UNKNOWN. It means the winbindd
parent only retries the first sid.
Comment 1 Samba QA Contact 2023-03-10 11:36:11 UTC
This bug was referenced in samba master:

a9583b5f96fe3fbf9c1ee545fa868fd705aef3e0
Comment 2 Jeremy Allison 2023-03-11 00:26:47 UTC
Created attachment 17802 [details]
git-am fix for 4.18.next, 4.17.next

Cherry-picked from master.
Comment 3 Jule Anger 2023-03-29 19:00:05 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 4 Samba QA Contact 2023-03-30 16:11:07 UTC
This bug was referenced in samba v4-17-test:

edc8659b5055e3b8adec83417846a76147ee1408
Comment 5 Samba QA Contact 2023-04-05 11:42:36 UTC
This bug was referenced in samba v4-18-test:

fd7e0aaa196c83f28d76a0309d09c27e5eedae59
Comment 6 Jule Anger 2023-04-05 11:53:56 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2023-04-19 10:23:32 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.2):

fd7e0aaa196c83f28d76a0309d09c27e5eedae59
Comment 8 Samba QA Contact 2023-05-11 07:10:31 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.8):

edc8659b5055e3b8adec83417846a76147ee1408